--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,8 @@ dependencies {
     implementation ('net.dv8tion:JDA:4.2.0_243') {
         exclude module: 'opus-java'
     }
+    // jsoup HTML parser library @ https://jsoup.org/
+    implementation 'org.jsoup:jsoup:1.13.1'
     implementation 'org.simpleframework:simple-xml:2.7.1'
     implementation 'org.apache.commons:commons-text:1.7'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
